fixed the white space, platform logos modified, scribble added to the backgrounds

--- a/contents/style/style.scss
+++ b/contents/style/style.scss
@@ -21,11 +21,7 @@ body {
     top: 0px;
     width: 100%;
     background: clear;
-    z-index:9;
-    text-align:left;
     color: #000;
-//    padding: 10px 0 0 10px;
-
 }
 
 /*-----------------------------------------------------------------------------------*/
@@ -40,8 +36,6 @@ h1 {
     color:floralwhite;
     text-align: center;
     line-height: 600px;
-//    display: inline-block;
-//    position: relative;
     vertical-align: middle;
 }
 
@@ -49,20 +43,12 @@ div.backgroundImage{
     width:102%;
     height:730px;
     margin: -1.2%;
-//    background-image: url("../images/backimage.png");
-//    background-position: center center;
-////    background-attachment: fixed;
-//    -webkit-background-size: cover;
-//    -moz-background-size: cover;
-//    -o-background-size: cover;
-//    background-size:cover;
-//    
-//    position: relative;
-     background: url("../images/backimage.png") no-repeat 50% 50% fixed; 
-  background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  -webkit-background-size: cover;
+    background: url("../images/backimage.png") no-repeat 50% 50% fixed; 
+    background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    -webkit-background-size: cover;
+    background-color: #181C2D;
 }
 
 .logo{
@@ -124,11 +110,12 @@ div.go-down{
 }
 
 /*-----------------------------------------------------------------------------------*/
-/*	2.5 1Billion
+/*	2.5 1 Billion
 /*-----------------------------------------------------------------------------------*/
 
 .world{
     background: #181C2D no-repeat center;
+    background-image: url("../images/scribble_flipped.png");
 //    background-image: url("../images/world.png");
     background-size: 100% auto;
     background-repeat: no-repeat;
@@ -162,6 +149,7 @@ div.go-down{
 
 .section3{
     background: #060C13;
+    background-image: url("../images/scribble.png");
     z-index: 999;
     padding: 80px 0;
     height: 650px;
@@ -220,6 +208,7 @@ div.go-down{
 .section4{
 //    background: #100a06;
     background: #ededed;
+    background-image: url("../images/scribble.png");
     z-index: 999;
     padding: 80px 0;
     height: 450px;
@@ -298,7 +287,7 @@ input {
     letter-spacing: 3px;
     text-shadow: none;
     text-transform: uppercase;
-    width: 350px;
+    width: 250px;
     -webkit-transition: all 0.2s ease-in-out;
     -moz-transition: all 0.2s ease-in-out;
     -ms-transition: all 0.2s ease-in-out;
@@ -318,6 +307,8 @@ input {
 }
 
 .copyright {
-  margin-top: 50px;
-  font-weight: 100;
+    margin-top: 50px;
+    font-weight: 100;
+    font-family: 'Source Sans Pro';
+    font-size: 10pt;
 }
